{
  "version": 4,
  "terraform_version": "1.8.5",
  "serial": 141,
  "lineage": "abc3d3d2-48f6-e2f3-836e-88019ca1226a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "nginx-alb-http-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:912196314468:listener/app/local-demo-alb/576646d32c194b77/6048de4c3785c293",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:912196314468:targetgroup/local-demo-tg/40dcf6e75e610198",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:912196314468:listener/app/local-demo-alb/576646d32c194b77/6048de4c3785c293",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:912196314468:loadbalancer/app/local-demo-alb/576646d32c194b77",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb_target_group.default-target-group",
            "aws_lb.dev-alb",
            "aws_security_group.sg-alb",
            "aws_subnet.dev-public",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "default-target-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:912196314468:targetgroup/local-demo-tg/40dcf6e75e610198",
            "arn_suffix": "targetgroup/local-demo-tg/40dcf6e75e610198",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 60,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 2,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:912196314468:targetgroup/local-demo-tg/40dcf6e75e610198",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "local-demo-tg",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-007792252c745a699"
          },
          "dependencies": [
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0b135799b18ffe695",
            "private_dns": "ip-10-0-1-151.ap-southeast-1.compute.internal",
            "public_dns": "ec2-13-215-242-169.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "13.215.242.169",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "local_demo-NAT Gateway EIP"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.dev-igw",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "local_demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-060e277c0d4cce553",
            "arn": "arn:aws:ec2:ap-southeast-1:912196314468:instance/i-0f722735b5746300d",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f722735b5746300d",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-052f8084da536a6df",
            "private_dns": "ip-10-0-1-148.ap-southeast-1.compute.internal",
            "private_ip": "10.0.1.148",
            "public_dns": "ec2-54-251-191-247.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "54.251.191.247",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "volume_id": "vol-0ae02af9da25cde48",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cd879242d10075f7",
            "tags": {
              "Name": "local_demo- ec2 - 1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0ed06781737304adc"
            ]
          },
          "dependencies": [
            "aws_subnet.dev-public",
            "aws_vpc.dev"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-060e277c0d4cce553",
            "arn": "arn:aws:ec2:ap-southeast-1:912196314468:instance/i-095a83e1b1b04765c",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-095a83e1b1b04765c",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-096f425be6da38219",
            "private_dns": "ip-10-0-2-26.ap-southeast-1.compute.internal",
            "private_ip": "10.0.2.26",
            "public_dns": "ec2-13-229-122-36.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "13.229.122.36",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "volume_id": "vol-02d66092d78331710",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e36fc2bc40627ec0",
            "tags": {
              "Name": "local_demo- ec2 - 2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0ed06781737304adc"
            ]
          },
          "dependencies": [
            "aws_subnet.dev-public",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "dev-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:912196314468:internet-gateway/igw-017623ab572a5b666",
            "id": "igw-017623ab572a5b666",
            "owner_id": "912196314468",
            "tags": {
              "Name": "dev-igw"
            },
            "vpc_id": "vpc-007792252c745a699"
          },
          "dependencies": [
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "dev-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:912196314468:loadbalancer/app/local-demo-alb/576646d32c194b77",
            "arn_suffix": "app/local-demo-alb/576646d32c194b77",
            "dns_name": "local-demo-alb-1830808593.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:912196314468:loadbalancer/app/local-demo-alb/576646d32c194b77",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "local-demo-alb",
            "security_groups": [
              "sg-097e07b265341c44a"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0cd879242d10075f7"
              },
              {
                "subnet_id": "subnet-0e36fc2bc40627ec0"
              }
            ],
            "subnets": [
              "subnet-0cd879242d10075f7",
              "subnet-0e36fc2bc40627ec0"
            ],
            "vpc_id": "vpc-007792252c745a699",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "dependencies": [
            "aws_security_group.sg-alb",
            "aws_subnet.dev-public",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dev-public-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0514c450fde61a7bc",
            "owner_id": "912196314468",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-017623ab572a5b666",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "2nd public route table"
            },
            "vpc_id": "vpc-007792252c745a699"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.dev-igw",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-095bbd36803d65fc0",
            "route_table_id": "rtb-0514c450fde61a7bc",
            "subnet_id": "subnet-0cd879242d10075f7"
          },
          "dependencies": [
            "aws_internet_gateway.dev-igw",
            "aws_route_table.dev-public-route",
            "aws_subnet.dev-public",
            "aws_vpc.dev"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c16d610095ee62e3",
            "route_table_id": "rtb-0514c450fde61a7bc",
            "subnet_id": "subnet-0e36fc2bc40627ec0"
          },
          "dependencies": [
            "aws_internet_gateway.dev-igw",
            "aws_route_table.dev-public-route",
            "aws_subnet.dev-public",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:912196314468:security-group/sg-097e07b265341c44a",
            "description": "Controls access to the ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-097e07b265341c44a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP ingress",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh ingress",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "load_balancer_security_group_nginx",
            "name_prefix": "",
            "owner_id": "912196314468",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-007792252c745a699"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:912196314468:security-group/sg-05ee87b2c61723841",
            "description": "Allows inbound access from the ALB only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05ee87b2c61723841",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-097e07b265341c44a"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "ec2_security_group",
            "name_prefix": "",
            "owner_id": "912196314468",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-007792252c745a699"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg-alb",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:912196314468:subnet/subnet-0cd879242d10075f7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0cd879242d10075f7",
            "map_public_ip_on_launch": true,
            "owner_id": "912196314468",
            "tags": {
              "Name": "Public Subnet 1"
            },
            "vpc_id": "vpc-007792252c745a699"
          },
          "dependencies": [
            "aws_vpc.dev"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:912196314468:subnet/subnet-0e36fc2bc40627ec0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0e36fc2bc40627ec0",
            "map_public_ip_on_launch": true,
            "owner_id": "912196314468",
            "tags": {
              "Name": "Public Subnet 2"
            },
            "vpc_id": "vpc-007792252c745a699"
          },
          "dependencies": [
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:912196314468:subnet/subnet-0d6e54a05f168435b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0d6e54a05f168435b",
            "map_public_ip_on_launch": false,
            "owner_id": "912196314468",
            "tags": {
              "Name": "Private Subnet 1"
            },
            "vpc_id": "vpc-007792252c745a699"
          },
          "dependencies": [
            "aws_vpc.dev"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:912196314468:subnet/subnet-05f2789c27e20b11a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-05f2789c27e20b11a",
            "map_public_ip_on_launch": false,
            "owner_id": "912196314468",
            "tags": {
              "Name": "Private Subnet 2"
            },
            "vpc_id": "vpc-007792252c745a699"
          },
          "dependencies": [
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:912196314468:vpc/vpc-007792252c745a699",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0156b0b95679e564c",
            "default_route_table_id": "rtb-019da50185fce798a",
            "default_security_group_id": "sg-0ed06781737304adc",
            "dhcp_options_id": "dopt-ca9368ac",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-007792252c745a699",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-019da50185fce798a",
            "owner_id": "912196314468",
            "tags": {
              "Name": "local_demo-dev"
            }
          }
        }
      ]
    }
  ]
}